2005-03-03  Inge Wallin  <inge@lysator.liu.se>

	* kchartFontConfigPage.cc (class KChartFontListBoxItem): Move from
	kchartDataConfigPage.h.  That used to be an error.

2005-02-25  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99998:
	* kchartParameter3dConfigPage.cc (KChartParameter3dConfigPage):
	Make the depth parameter go from 0 to 2.0 instead of 0 to 40.

2005-02-24  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99390:
	* kchartBackgroundPixmapConfigPage.{h,cc}: Remove the big unused
	list to the left of the page.

	Fix bug 99999:
	* kchartWizardLabelsLegendPage.{h,cc}: Remove everything that has
	to do with second Y axis.
	* kchartWizardSetupAxesPage.{h,cc}: Remove everything that has to
	do with second Y axis.

	Fix part of 99997:
	* kchartColorConfigPage.{h,cc]: Remove everything that has to do
	with the second Y Axis.

2005-02-23  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99715
	* kchartSubTypeChartPage.h (KChartBarSubTypeChartPage): Rename
	layer -> stacked and beside -> normal, and change the strings
	accordingly. 

2005-02-22  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 99765:
	* kchartConfigDialog.cc (initSubtypePage): Don't create a
	configuration page for subtype if the type doesn't have a
	subtype.  Applicable to Pie, Ring and Box&Whiskers.

2005-02-19  Inge Wallin  <inge@lysator.liu.se>

	Start of a new page in the config dialog for configuring Data.
	This is not yet finished.
	* kchartDataConfigPage.h: New file
	* kchartDataConfigPage.cc: New file
	* kchartConfigDialog.h (KChartConfigDialog::m_datapage): New member
	* kchartConfigDialog.cc (KChartConfigDialog): Create the data page

2005-01-07  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Put all KChart classes into the KChart namespace
	* KDChart classes not changed!
	* QtTableView class not changed!

2005-01-06  Raphael Langerhorst <raphael-langerhorst@gmx.at>

	Improve Data Editor usability:
	* sheet.cc: Add tooltips and what's this help.